# unimrcp-plugin

./: Cargo.toml  build.rs
includes/: dgmrcp.h
src/: audio_stream.rs  engine.rs  lib.rs  logging.rs  resource_channel.rs
