[package]
name = "myplugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.64"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
log = "0.4"
#thin_trait_object = "*"
serde_json = "*"
base64 = "*"

[profile.release]
debug = false
opt-level = "s"
lto = true
